implement search by user and type